2006-02-21 Tim
 BUG: [ 1435491 ] Developer instructions needs to be updated
  Web\developer: needed.php

2006-02-06 Tim
 PATCH: [ 1424249 ] Add note about double-byte accelerators to l10n developer.ph
  Web\developer\l10n: instructions.php

2006-02-01 Perry
 PATCH: [ 1412386 ] Adding readme files
  Renamed readme.txt (this file) to Changes.txt
  New readme.txt file

2006-01-31 Tim
 PATCH: [ 1418972 ] Web: Add version '2.5' to translation status
  Web\developer\l10n: status.php status.xml

2006-01-23 Tim
 BUG: [ 1412395 ] Misspelling in l10n docs
  Web\developer\l10n: instructions.php

2006-01-13 Tim
 PATCH: [ 1404317 ] Web: Known Limitations page
  Web: page.inc
  Web\2.4: new file limitations.php
  Web\2.4\images: new file statusbar.gif

2006-01-11 Tim
 PATCH: [ 1402858 ] Web: New background color for 'important' and 'note'
  Web\css: all.css

2006-01-09 Tim
 BUG: [ 1394597 ] l10n status page is outdated
  Web\developer\l10n: status.php status.xml

2006-01-08 Tim
 Add "setCharset('UTF-8')" to file instructions.php
  Web\developer\l10n: instructions.php

2006-01-06 Perry
 Transcode instructions.php into UTF-8
  (example above line 52 was in CP1252)
  (example below line 52 was in GB2312)
  Web\developer\l10n: instructions.php
 
2006-01-05 Tim
 PATCH: [ 1394598 ] Small addition to translation instructions
  Web\developer\l10n: instructions.php

2006-01-04 Tim
 PATCH: [ 1394596 ] Make l10n web page more detailed
  Web\developer\l10n: index.php

2005-12-17 Tim
 PATCH: [ 1382921 ] Website changes for new stable release 2.4.4
  Web: downloads.php index.php page.inc WinMergePAD.xml
  Web\2.4: changes.txt index.php

2005-11-28 Tim
 Add 'Takashi Sawanaka' to developers.
  Web\developer: developers.xml

2005-11-12 Tim
 PATCH: [ 1353472 ] Website changes for new stable release 2.4.2
  Web: downloads.php index.php page.inc WinMergePAD.xml
  Web\2.4: changes.txt index.php

2005-10-24 Tim
 PATCH: [Web] Updated translation instructions
  Web\developer\l10n: instructions.php
