@@ -1,3 +1,8 @@
+2006-02-28 Tim
+ PATCH: [ 1440383 ] Suggested addition to manual about bug reports
+  Web: index.php
+  Web\2.4: index.php
+
 2006-02-21 Tim
  BUG: [ 1435491 ] Developer instructions needs to be updated
   Web\developer: needed.php
